--- a/social-media-backend/package.json
+++ b/social-media-backend/package.json
@@ -12,7 +12,9 @@
   "dependencies": {
     "config": "^3.3.3",
     "express": "^4.17.1",
-    "mongoose": "^5.11.11",
+    "mongoose": "^5.11.11"
+  },
+  "devDependencies": {
     "nodemon": "^2.0.7"
   }
 }
