--- a/social-media-backend/package.json
+++ b/social-media-backend/package.json
@@ -13,7 +13,8 @@
     "config": "^3.3.3",
     "express": "^4.17.1",
     "joi": "^17.3.0",
-    "mongoose": "^5.11.11"
+    "mongoose": "^5.11.11",
+    "mongoose-unique-validator": "^2.0.3"
   },
   "devDependencies": {
     "nodemon": "^2.0.7"
