--- a/social-media-backend/package.json
+++ b/social-media-backend/package.json
@@ -10,12 +10,20 @@
   "author": "",
   "license": "ISC",
   "dependencies": {
+    "bcryptjs": "^2.4.3",
+    "body-parser": "^1.19.0",
+    "concurrently": "^5.3.0",
     "config": "^3.3.3",
     "cors": "^2.8.5",
     "express": "^4.17.1",
+    "is-empty": "^1.2.0",
     "joi": "^17.3.0",
-    "mongoose": "^5.11.11",
-    "mongoose-unique-validator": "^2.0.3"
+    "jsonwebtoken": "^8.5.1",
+    "mongoose": "^5.11.13",
+    "mongoose-unique-validator": "^2.0.3",
+    "passport": "^0.4.1",
+    "passport-jwt": "^4.0.0",
+    "validator": "^13.5.2"
   },
   "devDependencies": {
     "nodemon": "^2.0.7"
